# website-backend

./: .eslintrc.js  .gitignore  .mise.toml  .pnp.cjs  LICENSE  README.md  cdk.json  eslint.config.mjs  jest.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build-pr.yaml  deploy-aws-cdk.yaml
.husky/: pre-commit
functions/counter/: Cargo.toml
functions/counter/src/: main.rs
lib/: counter-stack.ts
test/: counter.test.ts
