[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
lambda_http = { version = "1.0.1", default-features = false, features = ["apigw_http", "apigw_rest"] }
lambda_runtime = "1.0.1"
tokio = { version = "1.48.0", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["ansi", "fmt"] }
