[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
lambda_http = { version = "1.0.2", default-features = false, features = ["apigw_http", "apigw_rest"] }
lambda_runtime = "1.0.2"
tokio = { version = "1.49.0", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["ansi", "fmt"] }
