[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.18"
aws-sdk-dynamodb = "1.115.0"
lambda_http = { version = "1.2.1", default-features = false, features = ["apigw_http", "apigw_rest"] }
lambda_runtime = "1.2.0"
tokio = { version = "1.52.3", features = ["macros"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "fmt"] }
